# PrismGuard

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  NOTICE  README.md  SECURITY.md  SUPPORT.md  pyproject.toml  triage.tuned.yaml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
.venv-pypi-test/: pyvenv.cfg
.venv-pypi-test/Scripts/: activate  activate.bat
benchmark/: __init__.py
benchmark/advertisement/: __init__.py  finalize.py  run_all.py  suites.py
benchmark/domain/: run_domain_benchmark.py
benchmark/hub/: README.md  benign_faq.txt
benchmark/law/: Dockerfile.stack  SAMPLE_DATA.md  __init__.py  compare_law.py  docker-compose.yml  fusion_ablation.py  run_corpus_scale.py  run_law_benchmark.py  run_local_benchmark.py
benchmark/shared/: holdout_quality.py
benchmark/tenant/: run_tenant_sim.py
docs/: GITHUB_PAGES_DEMO.md  RELEASE_NOTES_0.1.10.md  RELEASE_NOTES_0.1.8.md  RELEASE_NOTES_0.1.9.md  ai-overview.md  architecture.md  best-practices.md  default-artifacts.md  demo.html  enterprise-product-model.md  general-product-roadmap.md  guard-model-training.md  index.html  integration-guide.md  law-pilot-readiness.md  llm-context.md  prismguard-design.md  publishing-pypi.md  scorecard.md  tenant-context.md  user-updates.md
docs/marketing/: PINNED_DISTRIBUTION.md  README.md  distribution-channels.md  github-demo.md  grand-slam-offer.md  gtm-strategy.md  launch-checklist-2026-07-10.md  linkedin-pinned-comment.txt  linkedin-post.md  notebooklm-story.md  product-hunt-first-comment.txt  product-hunt-interactive-demo.md  product-hunt-launch.md  show-hn-post.md  tutorial-briefs.md  x-post.txt
examples/: 01_hub_web_chat.py  02_light_onnx.py  03_heavy_onnx.py  04_learn_from_seed.py  05_shadow_onnx.py  06_output_scan.py  README.md  _repo_path.py  chorusgraph_domain_guard.py  chorusgraph_hub_guard.py  chorusgraph_law_guard.py
handoffs/: HO-PrismGuard-016-finance-domain-retrain.md  handoffBug1.md  handoffBug2.md  handoffBug3.md  handoffBuglib1.md  handoffDogfood1.md  handoffDxLearnPath1.md  handoffDxScorecardPath1.md  handoffLandingPage.md  handoffLandingPage1.md  handoffOnnxCustomer1.md  handoffPerfLatency1.md  handoffPrismGuardImplementation.md  handoffQa001-scan-output.md  handoffQa015-finance-pi-structural.md  handoffQa017-readme-domain-train.md  handoffQa018-domain-pilot.md  handoffQa019-next-version-finance-pi.md  handoffbackBug1.md  handoffbackBug2.md  handoffbackBug3.md  handoffbackBuglib1.md  handoffbackDogfood1.md  handoffbackDxLearnPath1.md  handoffbackDxScorecardPath1.md  handoffbackLandingPage1.md  handoffbackOnnxCustomer1.md  handoffbackPerfLatency1.md  handoffbackPrismGuardImplementation.md  handoffbackQa001-scan-output.md  handoffbackTestHandoff1.md  testhandoff1.md
prismguard/: __init__.py  app_cli.py  cli.py  cli_check.py
prismguard/calibration/: tune.py
prismguard/config/: __init__.py  loader.py  triage.yaml
prismguard/context/: loader.py  matcher.py  models.py  templates.py
prismguard/data/: __init__.py  bundled.py
prismguard/domains/: registry.py
prismguard/eval/: __init__.py  self_check.py
prismguard/feedback/: cli.py  review.py  store.py
prismguard/http/: service.py
prismguard/integrations/: chorusgraph.py
prismguard/licensing/: __init__.py  errors.py  features.py  validator.py
prismguard/models/: __init__.py  artifact_fetch.py  calibration.py  cli.py  constants.py  corpus.py  default_artifacts.py  deps.py  eval.py  export.py  fit_calibration.py  hf_utils.py  loader.py  model_card.py  onnx_classifier.py  train.py
prismguard/observability/: metrics.py
prismguard/runtime/: __init__.py  capabilities.py  check.py  factory.py  fusion.py  guard_model.py  llm_judge.py  normalize.py  output_scan.py  stage_profiler.py  structural.py
prismguard/seed/: __init__.py  bundled.py  importer.py  merge.py  models.py  parse.py  validate.py
scripts/: _compare_ablation.py  _gate_stats.py  _holdout_compare_modes.py  _holdout_detail.py  ablate_corpus_holdout.py  ablate_holdout.py  ablate_holdout_one.py  adversarial_self_check.py  analyze_holdout_pipeline.py  analyze_latency_discrepancy.py  backfill_seed_blobs.py  check_law_pipeline_kpi.py  compare_profiles.py  compare_repro_runs.py  diag_holdout.py  diag_latency.py  diagnose_fp_path.py  eval_classifier_holdout.py  final_results_summary.py  finetune_hard_negatives.py  fit_law_calibration.py  holdout_quick.py  latency_by_gate.py  profile_pipeline_latency.py  s1_miss_analysis.py  threshold_sweep.py  train_prism_pi_hub.py  train_prism_pi_v2.py  train_prism_pi_v2_fast.py  verify_general_holdout.py  verify_onnx_only_path.py
seed/: README.md
tests/: test_adversarial_self_check.py  test_artifact_fetch.py  test_base_check_no_prism.py  test_blob_storage.py  test_bug1_runtime.py  test_bug1_seed.py  test_bug3_feedback.py  test_bug3_graph.py  test_bug3_runtime.py  test_bundled_seed.py  test_calibration.py  test_capabilities.py  test_chorusgraph_integration.py  test_cli.py  test_cli_check.py  test_config.py  test_corpus_oversample.py  test_disagreement_escalation.py  test_dogfood_factory.py  test_domain_agnostic.py  test_domain_pilot.py  test_embedder_cache.py  test_eval_self_check.py  test_guard_model_onnx.py  test_holdout_quality.py  test_http_service.py  test_hub_benign_faq.py  test_hybrid_classifier.py  test_law_benchmark.py  test_licensing.py  test_low_latency_profile.py  test_output_scan_pipeline.py  test_parallel_fusion.py  test_phases_complete.py  test_scaffold.py  test_seed_import.py  test_storage.py  test_structural_session.py  test_taxonomy.py  test_tenant_context.py  (+2 more)
(+225 files in other folders)
