[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prismguard"
version = "0.1.1"
description = "Self-hosted, audit-traceable prompt-injection firewall for LLM applications"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "Insight IT Solutions", email = "info@insightits.com" }]
keywords = ["llm", "security", "prompt-injection", "firewall", "guardrails", "rag"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
]

dependencies = [
    "pydantic>=2.5",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
serve = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
]
enterprise = [
    "cryptography>=42.0",
]
prism = [
    "prismlib>=0.4.0",
    "prismrag-patch>=0.2.1,<1.0.0",
    "prismcortex>=0.2.1",
]
pgvector = [
    "psycopg2-binary>=2.9",
    "prismguard[prism]",
    "prismrag-patch[pgvector]",
]
chroma = [
    "chromadb>=0.5",
    "prismguard[prism]",
    "prismrag-patch[chroma]",
]
pinecone = [
    "pinecone-client>=3.0",
    "prismguard[prism]",
    "prismrag-patch[pinecone]",
]
weaviate = [
    "weaviate-client>=4.0",
    "prismguard[prism]",
    "prismrag-patch[weaviate]",
]
guard-model = [
    "onnxruntime>=1.17.0",
    "tokenizers>=0.19.0",
    "huggingface_hub>=0.23.0",
    "numpy>=1.26.0",
]
train = [
    "transformers>=4.40.0",
    "torch>=2.2.0",
    "scikit-learn>=1.4.0",
    "onnx>=1.16.0",
    "onnxscript>=0.1.0",
    "prismguard[guard-model]",
]
session-redis = [
    "redis>=5.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.10.0",
    "ruff>=0.4.0",
    "prismguard[seed,prism]",
]
seed = [
    "pyarrow>=14.0",
]
benchmark-law = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
    "langgraph>=0.2",
    "llm-guard>=0.3.13",
    "prismguard[embeddings]",
]
llm-guard = [
    "llm-guard>=0.3.13",
]
judge = [
    "openai>=1.0.0",
]
embeddings = [
    "sentence-transformers>=3.0.0",
]
calibration = [
    "prismguard[seed,prism]",
]
all = [
    "prismguard[pgvector,chroma,pinecone,weaviate,guard-model,seed,dev,serve,enterprise]",
]

[project.scripts]
prismguard = "prismguard.app_cli:main"
prismguard-seed = "prismguard.cli:main"
prismguard-model = "prismguard.models.cli:main"
prismguard-serve = "prismguard.http.service:main"
prismguard-profile = "prismguard.tools.profile_pipeline:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["prismguard*"]

[tool.setuptools.package-data]
prismguard = [
    "config/triage.yaml",
    "config/storage.yaml",
    "seed/corpus/**/*",
    "models/artifacts/prism-pi-v1/**/*",
    "domains/**/*.yaml",
]

[tool.setuptools.exclude-package-data]
prismguard = ["**/__pycache__/*", "**/*.pyc"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
